Implemented debug flag with debugging artifacts